# dsa-project

./: .gitignore  .gitmodules  README.md  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yml  docker.py  setup.sh  start.sh
dsa-backend/: .air.toml  .env.production  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  go.mod  go.sum  main.go  pyproject.toml
dsa-backend/app/: __init__.py  auth.py  constants.py  dependencies.py  error.py  main.py  records.py  test.py
dsa-backend/background/: process_queue.go
dsa-backend/config/: config.go
dsa-backend/docs/: docs.go  swagger.json  swagger.yaml
dsa-backend/fileutil/: copy.go  extractzip.go  removeMetaData.go  removeObjectFiles.go  sanitize.go
dsa-backend/handler/: assignmentConfig.go  handler.go  initialize.go  middleware.go  problem.go  request.go  response.go  scope.go  user.go
dsa-backend/model/: user.go
dsa-backend/router/: middleware.go  router.go  validator.go
dsa-backend/storage/: file.go  jobqueue.go  problem.go  request.go  user.go
dsa-backend/store/: user.go
dsa-backend/util/: copy.go  extractzip.go
dsa-backend/utils/: errors.go  jwt.go
dsa-judgeserver/: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-daemon.json  execute.go  execute_checker.go  execute_util.go  go.mod  go.sum  howto.md  install-crun.sh  judge_background.go  judge_execute.go  judge_watchdog_datatype.go  judge_worker.go  main.go  prepare-sandbox.sh  pyproject.toml  start.sh
dsa-judgeserver/langs/: Dockerfile.binary-runner  (+3 more)
(+266 files in other folders)
