[project]
name = "dsa-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary,pool]>=3.2.9",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "sqlmodel>=0.0.24",
]
