[project]
name = "dsa-judge"
version = "0.1.0"
description = "dsa judge server"
authors = [
    { name = "Takuya Mizokami", email = "takoyaki65@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    "docker>=7.1.0",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.38",
    "pymysql>=1.1.1",
    "cryptography>=44.0.2",
    "python-dotenv>=1.0.1",
]
